# robotic

./: README.md
PG_ws/devel/: .catkin  .rosinstall  .setup.sh.swp  setup.sh
PG_ws/devel/lib/experiment_03/: robo_3_0  robo_3_1
PG_ws/devel/lib/pkgconfig/: experiment_03.pc  unit_01.pc  unit_02.pc  unit_03.pc  unit_05.pc
PG_ws/devel/lib/unit_01/: robo_A  robo_B  robo_C  robo_D  robo_XYZ
PG_ws/devel/lib/unit_02/: robo_tree  robo_two  robo_wallboy
PG_ws/devel/lib/unit_03/: bob_ros  robo_Dr3
PG_ws/devel/lib/unit_05/: guess_01  guess_02
PG_ws/internet_muell/: camerapublisher.cpp  camerasubscriber.cpp  cv_camera_test.cpp
PG_ws/src/AIS_worlds/: LBH_floor_1.world  LBH_floor_1.yaml  irobot.inc  kanten_prakt_01.txt  knoten_prakt_01.txt  manifest.xml  map.inc  prakt_01.world  prakt_01.yaml  sick.inc
PG_ws/src/experiment_03/: CMakeLists.txt  CMakeLists.txt~  amcl.rviz  amcl_cfg.vcg  package.xml  package.xml~  rviz_cfg.vcg  rviz_config.rviz
PG_ws/src/experiment_03/launch/: robo_2_0_simulation.launch~  robo_3_0_simulation.launch  robo_3_0_simulation.launch~  robo_3_1_simulation.launch  robo_3_1_simulation.launch~  robo_3_2_simulation.launch  robo_3_2_simulation.launch~  robo_3_3_roomrider.launch  robo_3_3_roomrider.launch~  robo_3_3_simulation.launch
PG_ws/src/experiment_03/src/: robo_3_0.cpp  robo_3_0.cpp~  robo_3_1.cpp  robo_3_1.cpp~
PG_ws/src/unit_01/: CMakeLists.txt  package.xml
PG_ws/src/unit_01/launch/: prakt_01_sim.launch  prakt_02_sim.launch  robo_A_sim.launch  robo_B_sim.launch  robo_C_sim.launch  robo_D_sim.launch  robo_XYZ_sim.launch
PG_ws/src/unit_01/src/: robo_A.cpp  robo_B.cpp  robo_C.cpp  robo_D.cpp  robo_XYZ.cpp
PG_ws/src/unit_02/: CMakeLists.txt
PG_ws/src/unit_02/launch/: prakt_02_sim.launch  robo_tree_sim.launch  robo_two_sim.launch  robo_wallboy_sim.launch
PG_ws/src/unit_02/src/: robo_tree.cpp  robo_two.cpp  robo_wallboy.cpp
PG_ws/src/unit_03/: CMakeLists.txt  default.rviz  package.xml  rviz_config01.rviz  rviz_config02.rviz
PG_ws/src/unit_03/launch/: bob_ros_sim.launch  robo_T01_sim.launch  robo_T02_sim.launch  robo_T03_sim.launch  robo_T04_sim.launch  robo_T05_sim.launch  robo_T06_sim.launch  robo_bob_sim.launch
PG_ws/src/unit_03/src/: A_star.cpp  A_star.h  A_star_bib.cpp  Graph.cpp  Graph.h  bob_ros.cpp  dikstra.cpp  dikstra.h  kanten_prakt_01.txt  knoten.cpp  knoten_prakt_01.txt  robo_Dr4.cpp  robo_wall.cpp  robo_wall.h  startest.cpp  (+2 more)
PG_ws/src/unit_05/: .directory  CMakeLists.txt  package.xml
PG_ws/src/unit_05/launch/: .directory  guess.launch  guess02.launch  guess03.launch  guess44.launch
PG_ws/src/unit_05/src/: .directory  guess_01.cpp  guess_02.cpp  guess_03.py
(+5 files in other folders)
